# JuiceVault-Desktop

./: .gitignore  API_DOCS.md  API_SETTINGS_PROMPT.md  about.md  index.html  package-lock.json  package.json  t.yml  tailwind.config.js  update.md  vite.config.js
.claude/: settings.local.json
src/: App.jsx  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  cover_upload.rs  debug.rs  discord.rs  download.rs  eras.rs  local_files.rs  media.rs  mod.rs  player.rs  playlist.rs  playlists.rs  profile.rs  radio.rs  songs.rs  stats.rs  updater.rs
src-tauri/src/models/: user.rs
src-tauri/src/services/: api.rs
src-tauri/src/utils/: config.rs
tauri-plugin-nativeaudio/: Cargo.toml  build.rs
tauri-plugin-nativeaudio/android/: build.gradle.kts  proguard-rules.pro
tauri-plugin-nativeaudio/android/src/main/: AndroidManifest.xml
tauri-plugin-nativeaudio/android/src/main/java/com/plugin/nativeaudio/: AudioEngine.kt  NativeAudioPlugin.kt  PlaybackService.kt
tauri-plugin-nativeaudio/ios/: Package.swift
tauri-plugin-nativeaudio/ios/Sources/: NativeAudioPlugin.swift
tauri-plugin-nativeaudio/permissions/: default.toml
tauri-plugin-nativeaudio/permissions/autogenerated/: reference.md
tauri-plugin-nativeaudio/permissions/autogenerated/commands/: play_track.toml  set_crossfade.toml  set_eq.toml
tauri-plugin-nativeaudio/permissions/schemas/: schema.json
tauri-plugin-nativeaudio/src/: commands.rs  error.rs  lib.rs  mobile.rs  models.rs
(+41 files in other folders)
