[package]
name = "juicevault-desktop"
version = "1.1.0"
description = "JuiceVault Desktop"
authors = ["you"]
edition = "2021"

[lib]
name = "juicevault_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
discord-rich-presence = "0.2"
sha2 = "0.10"
lofty = "0.21"
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
rayon = "1"
tauri-plugin-native-audio = "1"
