[package]
name = "tauri-plugin-nativeaudio"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-nativeaudio"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = "2"
tauri-plugin = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
